# USSL9-chatbot-backend

./: .env  .env.example  .gitignore  Makefile  README.md  RENDER_DEPLOYMENT.md  pyproject.toml  render.yaml  requirements.txt  test_agent.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  univr_agent.py
app/api/: __init__.py  admin.py  auth.py  chat.py
app/services/: __init__.py  extra_stores.py  store_manager.py  store_selector.py
data/: store_descriptions.json
data/sample_docs/: international_admissions.md  scholarship_guide.md  tuition_fees.md
data/ulss9_sample/general_info/: README.md  chi_siamo_ulss9.md  modulistica_cosa_fare_per.md  numeri_utili_contatti.md  prenotazioni_visite_esami.md
docs/: ADMIN_PREPARE_STORES.md  BACKEND_DESIGN_ULSS9.md  CHAT_FLOW.md  RAG_STORAGE_ULSS9.md  univr_chatbot_documentation.aux  univr_chatbot_documentation.out  univr_chatbot_documentation.tex  univr_chatbot_documentation.toc
scripts/: ingest_sample_general_info.py
templates/: index.html
tests/: conftest.py  test_api.py
