[project]
name = "univr-chatbot"
version = "0.1.0"
description = "RAG-based chatbot for University of Verona announcements, scholarships, and student services"
authors = [
    {name = "UniVR Student Services"},
]
dependencies = [
    "google-genai>=1.49.0",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "jinja2",
    "python-multipart",
    "aiofiles",
    "httpx",
]
requires-python = ">=3.12"

[project.optional-dependencies]
jupyter = [
    "jupyter",
    "ipython"
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
